chore: Make the simple CPU cache line information a library